--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,24 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.Menu">
+        <activity android:name=".activities.Menu"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.Game" />
-        <activity android:name=".activities.Choosing"></activity>
+        <activity android:name=".activities.Game"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.Choosing"
+            android:screenOrientation="portrait"/>
+
+        <service
+            android:name=".services.BackgroundSoundService"
+            android:stopWithTask="true"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
